k8s/PKSParis/demo/App/Enhanced/tito-sql-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: tito-sql
  labels:
    name: tito-sql
    version: "1.5"
    app: tito
    stage: prod
    tiers: tito-sql
spec:
  containers:
    - name: tito-sql
      image: harbor.pks-reg.gv/pksparis/tito-sql:latest
      ports:
      - containerPort: 3306
  imagePullSecrets:
    - name: regsecret
