k8s/PKSParis/demo/App/Enhanced/tito-fe-nsecpolicy-allow-fe-to-db.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: backend-tito
spec:
  podSelector: 
    matchLabels:
      tiers: tito-sql
  ingress:
  - from:
    - podSelector:
        matchLabels:
          tiers: tito-fe
